fix wrapping list, colors

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,108 +1,123 @@
 :root {
-    --bg-color: #4d4a4d;
-    --main-text-color: #b305da;
+  --bg-color: #444242;
+  --main-text-color: #be71cf;
 }
 
 body {
-    background-color: var(--bg-color);
-    color: var(--main-text-color);
-    font-size: 16px;
+  background-color: var(--bg-color);
+  color: var(--main-text-color);
+  font-size: 16px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+header,
+footer,
+main {
+  padding: 10px 50px;
 }
 
 header {
-    text-align: center;
-    padding: 10px auto;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+
+header h1 {
+  padding: 15px;
+  font-size: 180%
 }
 
 header p {
-    color: #fff;
-    font-size: 90%;
+  color: #fff;
+  font-size: 90%;
 }
 
-section.main-container {
-    display: flex;
-    /* border: 1px solid red; */
-    justify-content: start;
-    flex-wrap: wrap;
-    padding: 10px;
+ul.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  gap: 5px;
+
 }
 
-section.main-container p {
-    /* display: flex; */
-    /* justify-content: space-around;
-    flex-wrap: wrap; */
-    text-align: left;
+li.card {
+  display: flex;
+  flex: 1 0 30%;
+  min-width: 0;
+  padding: 10px;
 }
 
-section.main-container section {
-    color: #fff;
-    /* border: 1px solid blue; */
-    justify-content: space-around;
-    flex-wrap: wrap;
-    background-color: var(--main-text-color);
-    padding: 5px;
-    font-size: 90%;
-    font-family: monospace;
-    background-image: linear-gradient(to bottom, rgb(55, 19, 52), var(--main-text-color));
-    border-radius: 5px;
-}
-
-section.main-container section:hover {
-    box-shadow: inset 0 0 10px rgba(229, 81, 255, 0.523);
+li.card section {
+  flex-grow: 1;
+  background-image: linear-gradient(to bottom, #643961df, #e868eba5);
+  color: #fff;
+  min-width: 0;
+  padding: 5px;
+  border-radius: 5px;
 }
 
 article {
-    border: 1.5px dashed white;
-    /* border-radius: 5%; */
-    /* flex: 1 1 0; */
-    /* flex-basis: 30%; */
-    /* min-height: 300px;
-    text-align: left;
-   
-    /* width: 500px;
-    height: 300px; */
-    padding: 10px;
-    margin: 10px;
-    /* min-width: 30%; */
-    /* max-width: 30% */
-    flex: 1 0 23%;
+  flex: 1 0 33%;
+  border: 1px dashed #fff;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin: 10px;
+  position: relative;
+  padding: 0 15px 15px 15px;
 
 }
 
 article:hover {
-    box-shadow: inset 0 0 10px rgb(0, 0, 0);
-    /* text-shadow: inset 0 0 5px rgb(32, 18, 42); */
+  box-shadow: 10px 10px 15px var(--main-text-color);
 }
 
 article h2 {
-    font-size: 150%;
-    border: 1px solid white;
-    border-radius: 5px;
-    padding: 5px;
-    margin: 0px;
-    /* padding: 10px; */
+  font-size: 150%;
+  border: 1px solid white;
+  border-radius: 5px;
+  padding: 10px;
+  margin: 0px;
+  margin-top: -20px;
+
+  background: var(--bg-color);
+}
+
+article p {
+  font-size: 80%;
+}
+
+article h2:hover {
+  box-shadow: 2px 2px 3px var(--main-text-color);
 }
 
 footer {
-    text-align: center;
-    font-size: 150%;
-  }
+  text-align: center;
+  font-size: 90%;
+}
+
+
+pre {
+  white-space: pre-wrap;
+  word-wrap: break-word;
+}
+
+
 
 
 /* Responsive design */
 
-  /* tablets up to 768px */
-  @media screen and (max-width: 768px) {
-    article {
-        flex: 1 0 35%;
-      }
-    
+/* tablets up to 768px */
+@media screen and (max-width: 768px) {
+  li.card {
+    flex: 1 0 45%;
   }
-  
-  /* mobile*/
-  @media screen and (max-width: 480px) {
-    article {
-        flex: 1 0 100%;
-      }
+
+}
+
+/* mobile*/
+@media screen and (max-width: 520px) {
+  li.card {
+    flex: 1 0 90%;
   }
-  
+}
